// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offset renders 0 1`] = `
Array [
  .c0 {
  offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders function 1`] = `
Array [
  .c0 {
  offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders invalid theme path 1`] = `
Array [
  .c0 {
  offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders negative number 1`] = `
Array [
  .c0 {
  offset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  offset: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  offset: July;
}

@media May {
  .c0 {
    offset: August;
  }
}

@media April {
  .c0 {
    offset: September;
  }
}

@media January {
  .c0 {
    offset: November;
  }
}

@media April {
  .c0 {
    offset: August;
  }
}

@media June {
  .c0 {
    offset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset: July;
}

@media May {
  .c0 {
    offset: August;
  }
}

@media April {
  .c0 {
    offset: September;
  }
}

@media January {
  .c0 {
    offset: November;
  }
}

@media April {
  .c0 {
    offset: August;
  }
}

@media June {
  .c0 {
    offset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset: November;
  }
}

@media April {
  .c0 {
    offset: January;
  }
}

@media January {
  .c0 {
    offset: December;
  }
}

@media April {
  .c0 {
    offset: April;
  }
}

@media June {
  .c0 {
    offset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset: November;
  }
}

@media April {
  .c0 {
    offset: January;
  }
}

@media January {
  .c0 {
    offset: December;
  }
}

@media April {
  .c0 {
    offset: April;
  }
}

@media June {
  .c0 {
    offset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    offset: July;
  }
}

@media April {
  .c0 {
    offset: August;
  }
}

@media January {
  .c0 {
    offset: September;
  }
}

@media April {
  .c0 {
    offset: November;
  }
}

@media June {
  .c0 {
    offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset: July;
  }
}

@media April {
  .c0 {
    offset: August;
  }
}

@media January {
  .c0 {
    offset: September;
  }
}

@media April {
  .c0 {
    offset: November;
  }
}

@media June {
  .c0 {
    offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset: January;
  }
}

@media April {
  .c0 {
    offset: December;
  }
}

@media January {
  .c0 {
    offset: April;
  }
}

@media April {
  .c0 {
    offset: May;
  }
}

@media June {
  .c0 {
    offset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset: January;
  }
}

@media April {
  .c0 {
    offset: December;
  }
}

@media January {
  .c0 {
    offset: April;
  }
}

@media April {
  .c0 {
    offset: May;
  }
}

@media June {
  .c0 {
    offset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders postitive number 1`] = `
Array [
  .c0 {
  offset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders string 1`] = `
Array [
  .c0 {
  offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`offset renders valid theme path 1`] = `
Array [
  .c0 {
  offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
